--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>omnifaces</artifactId>
             <version>3.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
 </project>
